<resources>
    <string name="app_name">Blog App</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="no_internet">Connect Internet</string>
    <string name="id">14</string>
    <string name="name">Name <font color='#FF0000'>*</font></string>
    <string name="email">Email <font color='#FF0000'>*</font></string>
    <string name="add_comment">Add Comment</string>
    <string name="comments">Comments <font color='#FF0000'>*</font></string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title">Post Title <font color='#FF0000'>*</font></string>
    <string name="post_body">Post Body <font color='#FF0000'>*</font></string>
    <string name="post">Post</string>
</resources>